improve the styles

--- a/style.css
+++ b/style.css
@@ -27,7 +27,12 @@ body{
     flex-direction: column;
     align-items: flex-start;
     margin-inline: auto;
-    margin-block: 6.25rem;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin-block: auto;
     border: 1px solid black;
     border-radius: 0.625rem;
     width: 20rem;
